# civibus

./: .dockerignore  .env.production.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml  sources.yaml
.debbie/: sync_manifest.json
.github/workflows/: ci.yml  deploy.yml  integration.yml  uptime_probe.yml
api/: __init__.py  _federal_first_test_support.py  canary_check.py  conftest.py  contribution_insights_contract.py  deps.py  health_content.py  health_version.py  main.py  portrait_policy.py  queries_graph.py  test_auth.py  test_campaign_finance.py  test_campaign_finance_slug.py  test_campaign_finance_support.py  test_canary_check.py  test_civics.py  test_civics_queries.py  test_cors.py  test_deps.py  test_entities.py  test_entity_resolution.py  test_entity_resolution_support.py  test_graph.py  test_graph_queries.py  test_graph_support.py  test_health_content.py  test_health_version.py  test_investigate.py  test_logging.py  test_main.py  test_metadata.py  test_models.py  test_money_leaderboard_integrity.py  test_person_slug.py  test_portrait_admin.py  test_property.py  test_property_support.py  test_public_federal.py  test_rate_limit.py  (+1 more)
api/middleware/: __init__.py  access.py  logging.py
api/models/: __init__.py  _validation.py  (+10 more)
core/: db.py  db_ingest.py  docker_compose.py  keel_adversarial_pair.py  keel_current.py  keel_emitted_evidence.py  keel_evidence_commit.py  keel_evidence_retention.py  keel_gate_l1.py  keel_gate_l10.py  keel_gate_l11.py  keel_gate_l13.py  keel_gate_l14.py  keel_gate_l15.py  keel_gate_l3.py  keel_gate_l6.py  keel_gate_l7.py  keel_gate_l8.py  keel_gate_l9.py  keel_judge_prompt.py  keel_review_schedule.py  keel_session_output.py  keel_status.py  schema_sql_fallback.py  schema_sql_runner.py  test_db.py  test_db_ingest_integration.py  test_db_update_person_bio_fields_if_missing.py  test_docker_compose.py  test_field_provenance_integration.py  test_keel_gate_l14.py  test_refresh_runner.py  test_schema_sql_fallback.py  test_schema_sql_runner.py  test_strip_null_bytes.py
infra/: Caddyfile  deploy_hot_patch_debt.yaml  docker-compose.prod.yml  docker-compose.yml
scripts/: register_roster_pilot_sources.py  stage_close_gate.py
test_support/: __init__.py  api_real_path.py  bootstrap_canaries.py  cross_domain_graph.py  donor_search_fixture.py  fec_fixtures.py  makefile_contract_helpers.py  schedule_e.py
tests/: er_false_positive_corpus.yaml  er_regression_pairs.yaml  regression_corpus.yaml  test_bootstrap_contract.py  test_conftest_db_fixtures.py  test_db_integration.py  test_debbie_post_sync_hook.py  test_doc_system_v2_layout.py  test_e2e_smoke.py  test_graph_queries.py  test_parked_suite_exclusion.py  test_priority_scope_may_primaries.py  test_relational_queries.py  test_runner_global_lock.py  test_runner_ky_contribution_jobs.py  test_schedule_e_test_support.py  test_stage1_fec_committee_summary_format_outputs.py  test_stage1_fec_schedule_b_source_contract.py  test_stage1_fec_schedule_e_format_outputs.py  test_stage1_infrastructure.py  test_stage1_phl_full_backfill_closeout_doc_contract.py  test_stage1_tx_pa_research_outputs.py  test_stage2_maintainability.py  test_stage2_property_domain_skeleton.py  test_stage3_property_schema_wiring.py  test_stage3_research_regressions.py  test_stage5_cross_state_validation.py  test_stage5_ga_runner_date_defaults.py  test_stage5_schedule_e_closeout_docs.py  test_stage6_test_audit_regressions.py  test_state_sample_ingest_smoke.py
web/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
(+1504 files in other folders)
