[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civibus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic",
  "pyyaml",
  "psycopg[binary]",
  "psutil",
  "httpx",
  "jsonschema",
  "beautifulsoup4>=4.14.3",
  "psycopg-pool>=3.3.0",
  "pyshp",
]

[project.optional-dependencies]
dev = [
  "fastapi",
  "pandas",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-timeout",
  "ruff",
]
api = [
  "fastapi",
  "uvicorn[standard]",
]
entity-resolution = [
  "duckdb",
  "pandas",
  "splink",
]
download = [
  "playwright",
]
load = [
  "locust",
]

[tool.pytest.ini_options]
testpaths = ["api", "core", "domains", "tests"]
addopts = ["--import-mode=importlib"]
markers = [
  "unit: regular suite of tests",
  "integration: requires external services such as Postgres, Docker, or networked APIs",
  "e2e: end-to-end tests requiring Docker, database, and live API access",
  "quarantined: exact DB-backed test quarantined with a documented reason and owner",
  "dev_repo_only: contract requires canonical dev-repo assets intentionally excluded from public mirrors",
]
timeout = 120

# Coverage measures PRODUCT code only; the CI --cov-fail-under gate is meant
# to catch untested product code, and test files in the denominator distort it
# both ways (unit test files run at ~100%, integration/e2e test files sit at
# ~10% when deselected by the unit run). Measured 2026-07-07: product-only
# coverage 72.6% vs 69% with test files mixed in.
#
# The jurisdictions patterns are the parked-jurisdiction quarantine
# counterpart to the conftest.py collect_ignore gate: per-state/city tests are
# excluded from default collection, so their (frozen) product code must not
# sit untested in the denominator. Omit exactly the per-state/city subdir
# contents (coverage's `*` crosses path separators, so `*/*` reaches
# arbitrarily deep) while shared helpers directly under jurisdictions/states/
# (load_utils.py etc.) remain measured — they are live federal-ingest
# dependencies.
[tool.coverage.run]
omit = [
  "*/test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "conftest.py",
  "domains/campaign_finance/jurisdictions/states/*/*",
  "domains/campaign_finance/jurisdictions/cities/*/*",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "domains"]
